	* Haskell: allow block comment delimiters of any length [#202,#169]
	* Haskell: define Err monad as Either String [#273]
	* C/C++/Java: support multiple block comment forms per grammar [#202]
	* C++: fixed quadratic behavior in C++-generated printer (regression in 2.8.2)
	* Java/ANTLR: emit start rules to work around ANTLR issue #2689 [#272]

2.8.3 Andreas Abel <andreas.abel@gu.se>  August 2019
	* GHC 8.8 compatibility
	* Stack installation supported by provided .yaml files [#198]
	* Unicode support in lexer, excl. C, C++ and Ocaml [#249]
	* LBNF: support \r (carriage return) and \f (form feed) in token declaration [#257]
	* LBNF: allow numbered categories (like Foo2) independent of coercions [#210]
	* Agda: new (experimental) backend, providing bindings to AST/parser/printer of Haskell backend
	* C: supports now the -l option to give error locations [#238]
	* C: correct function names in generated skeletons [#239]
	* C, C++: handle regular expression difference (subtraction) correctly [#237]
	* Haskell: generates now more fine-grained Makefile that invokes bnfc on changed .cf file
	* Haskell: use qualified import of AST in generated printer [#128,#228]
	* Haskell: printer code no longer produces deprecation warning concerning OverlappingInstances [#233]
	* Haskell/CNF: fixed problem with Any type in generated code [#216]
	* Haskell/CNF: generated test program now same name (Test) as w/o --cnf
	* Haskell/GLR: correct module header in .y file [#252]

2.8.2 Andreas Abel <andreas.abel@gu.se>  November 2018
	* GHC 8.4 compatibility [#227,#236]
	* bnfc now puts current timestamp on all created files, even unchanged ones [#219]
	* bnfc is now more accepting about border-line terminals [#149]
	* Improved error messages [#144] in particular on undefined categories [#151]
	* C: Emit correct function prototypes [#185]
	* C++: Fix buffer overrun in pretty printer [#242]
	* C++: Fix regression introduced in 2.8 in Skeleton.H [#164]